--- a/css/ip.css
+++ b/css/ip.css
@@ -2,26 +2,22 @@ body {
   width: 100%;
   margin: 40px auto 0 auto;
 }
-.container{
+.container-fluid{
   height: 100px
   width: 100%;
   background: pink;
 }
-.header {
-  background: blue;
-  width: 100%;
-}
-/* Style all font awesome icons */
+
 .fa {
     padding: 20px;
     font-size: 30px;
-    width: 50px;
+    width: 10px;
     text-align: center;
     text-decoration: none;
-    border-radius: 50%;
+    border-radius: 10%;
 }
 
-/* Add a hover effect */
+
 .fa:hover {
     opacity: 0.7;
 }
