--- a/css/ip.css
+++ b/css/ip.css
@@ -7,6 +7,13 @@ body {
   width: 100%;
   background: pink;
 }
+title, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
+}
 
 .fa {
     padding: 20px;
