--- a/css/ip.css
+++ b/css/ip.css
@@ -1,44 +1,1 @@
-body {
-  width: 100%;
-  margin: 40px auto 0 auto;
-}
-.container-fluid{
-  height: 100px
-  width: 100%;
-  background: pink;
-}
-title, footer {
-    padding: 1em;
-    color: white;
-    background-color: black;
-    clear: left;
-    text-align: center;
-}
-
-.fa {
-    padding: 5px;
-    font-size: 10px;
-    width: 5px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 10%;
-}
-
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-/* Set a specific color */
-
-/* Facebook */
-.fa-facebook {
-    background: #3B5998;
-    color: white;
-}
-
-/* Twitter */
-.fa-twitter {
-    background: #55ACEE;
-    color: white;
-}
+#
