--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,14 @@ h1 strong {
   /*font-weight: 300;*/
 }
 
-h2 {
+/*h2 {
   line-height: 20px;
   margin: 0;
   color: #121d1f;
   font-weight: 400;
   margin-bottom: 30px;
   font-size: 34px;
-}
+}*/
 
 h3, h4 {
   color: #000;
@@ -38,8 +38,8 @@ h5 {
 }
 
 p.intro {
-  font-size: 16px;
-  margin: 12px 0 0;
+  font-size: 26px;
+  margin: 5px 0 0;
   line-height: 24px;
   font-family: 'Open Sans', sans-serif;
 }
@@ -270,7 +270,7 @@ ul.dropdown-menu {
 /* About Section */
 
 #about {
-  /*padding: 20px 0;*/
+  padding: 20px 0;
   background: #f6f6f6;
 }
 
@@ -280,6 +280,11 @@ ul.dropdown-menu {
 
 #about p {
   margin-bottom: 30px;
+}
+
+#about .social ul li {
+  display: inline-block;
+  margin: 0 20px;
 }
 
 /* Portfolio Section */
