--- a/css/style.css
+++ b/css/style.css
@@ -44,13 +44,13 @@ p.intro {
   font-family: 'Open Sans', sans-serif;
 }
 
-a {
+/*a {
   color: #333;
-}
+}*/
 
 a:hover, a:focus {
   text-decoration: none;
-  color: #7bc3d1;
+  color: #fff;
 }
 
 ul, ol {
