--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ ul.dropdown-menu {
   width: 100%;
   height: 100vh;
   margin-bottom: 7px;
-  margin-top: -61px;
+  margin-top: -73px;
   /*padding: 100px 0;*/
   text-align: center;
   color: #fff;
@@ -343,6 +343,34 @@ ul.dropdown-menu {
   padding: 80px 0;
   background: #f6f6f6;
 }
+
+#btnsize {
+  font-size: 14px;
+  width: 100px;
+  height: 100px;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #fff;
+  /*padding: 21px 123px;*/
+  border-color: #fff;
+  border-radius: 0;
+}
+
+#portfolio-button {
+  display: block;
+  /*padding-right: 15px;
+  margin-top: 216px;*/
+}
+
+/*.btn-primary {
+  color: #fff;
+  background-color: #f6f6f6;
+  padding: 10px 20px;
+  border-color: #f6f6f6;
+  border-radius: 0;
+}*/
 
 .categories {
   padding-bottom: 30px;
@@ -493,6 +521,12 @@ ol.type li a:hover {
   /*padding: 100px 0 40px 0;*/
   color: #fff;
   background: #121d1f;
+}
+
+#contact {
+  /*padding: 100px 0 40px 0;*/
+  /*color: #121d1f;
+  background: #121d1f;*/
 }
 
 #contact h2 {
