--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ hr {
 /* Navigation */
 
 #nav {
-  /*z-index: 9999;*/
+  z-index: 9999;
 }
 
 #nav.affix {
@@ -242,6 +242,7 @@ ul.dropdown-menu {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+  background-position: center center;
 }
 
 .section-title.center {
@@ -253,7 +254,7 @@ ul.dropdown-menu {
 #about {
   padding-top: 134px;
   padding-bottom: 250px;
-  background: #f6f6f6;
+  background: #fff;
 }
 
 #about .about-text {
@@ -341,7 +342,11 @@ ul.dropdown-menu {
 
 #portfolio {
   padding: 80px 0;
-  background: #f6f6f6;
+  background: #fff;
+}
+
+.modal-header {
+  padding-top: 58px;
 }
 
 #btnsize {
@@ -512,25 +517,27 @@ ol.type li a:hover {
 #portfolio i.fa {
   font-size: 20px;
   padding: 5px;
-  color: #E87E04;
+  color: #121d1f;
 }
 
 /*#exampleModal {
   z-index: 4
 }*/
 
+/*.navbar-custom {
+  margin-bottom: 33px;
+  /* background-color: #121d1f; */
+
+/*border-radius: 0px;
+padding: 62px 0;*/
+
+*/
 /* Contact Section */
 
 #contact {
   /*padding: 100px 0 40px 0;*/
   color: #fff;
   background: #121d1f;
-}
-
-#contact {
-  /*padding: 100px 0 40px 0;*/
-  /*color: #121d1f;
-  background: #121d1f;*/
 }
 
 #contact h2 {
