--- a/css/style.css
+++ b/css/style.css
@@ -649,7 +649,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 /* Media Queries */
 
 @media(min-width:768px) {
-  .intro {
+  /*.intro {
     height: 100%;
     padding: 0;
     color: #fff;
@@ -658,7 +658,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
     font-size: 60px;
     font-weight: 500;
     letter-spacing: -2px;
-  }
+  }*/
   .intro .name {
     margin-left: 15px;
     text-align: left;
