--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ ul.dropdown-menu {
 .fa-chevron-down {
   color: #fff;
   font-size: 30px;
-  margin: 20px;
+  /*margin: 20px;*/
 }
 
 @-webkit-keyframes bounce {
@@ -357,11 +357,16 @@ ul.dropdown-menu {
 
 /* Home Section */
 
+#cfluid {
+  margin-top: 156px;
+}
+
 .intro {
   display: table;
   width: 100%;
   height: 100vh;
   padding: 100px 0;
+  margin-top: -88px;
   text-align: center;
   color: #fff;
   background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(../img/me.jpg) no-repeat center top;
@@ -380,7 +385,7 @@ ul.dropdown-menu {
 /* About Section */
 
 #about {
-  padding-top: 91px;
+  padding-top: 3px;
   padding-bottom: 184px;
   background: #f4f5f6;
   /*margin-top: -8px;*/
@@ -402,7 +407,7 @@ ul.dropdown-menu {
 /* Skills Section */
 
 #skills {
-  padding-top: 63px;
+  padding-top: 87px;
   padding-bottom: 177px;
   background: #fff;
 }
@@ -445,7 +450,8 @@ ul.dropdown-menu {
 /* Portfolio Section */
 
 #portfolio {
-  padding: 84px 0;
+  padding: 27px 0;
+  /*padding-top: 20px;*/
   background: #f4f5f6;
 }
 
@@ -764,6 +770,9 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
   /*.modal-content {
     margin-right: 95px;
   }*/
+  #cfluid {
+    margin-top: 106px;
+  }
   .intro .name {
     margin-left: 15px;
     text-align: left;
@@ -787,7 +796,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
   }
   .intro .intro-text h2 {
     font-family: 'Shadows Into Light', cursive;
-    font-size: 4vw;
+    font-size: 6vw;
     color: white;
     margin-top: 20px;
   }
@@ -829,21 +838,10 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
   }
 }
 
-@media (min-width: 2560px) {
-  bootstrap.css:1949 .col-md-6 {
-    width: 50%;
-    margin-left: 190px
-  }
-}
-
 @media(min-width:992px) {
   #here-me h1 {
     margin: 10px 0 0px;
   }
-  /*.bootstrap.css:1949 .col-md-6 {
-    width: 50%;
-    margin-left: 190px;
-  }*/
   .timeline>li {
     min-height: 150px;
   }
@@ -883,5 +881,32 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
   }
   .timeline>li.timeline-inverted>.timeline-panel {
     padding: 10px 100px 20px 20px;
+  }
+}
+
+@media (min-width: 2560px) {
+  bootstrap.css:1949 .col-md-6 {
+    width: 50%;
+    margin-left: 190px
+  }
+  .intro {
+    display: table;
+    width: 100%;
+    height: 106vh;
+  }
+  .intro .intro-text h2 {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 4vw;
+    color: white;
+    margin-top: 20px;
+  }
+  #name {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 70px;
+    font-weight: 600;
+  }
+  .web {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 50px;
   }
 }
