--- a/css/style.css
+++ b/css/style.css
@@ -365,8 +365,8 @@ ul.dropdown-menu {
   display: table;
   width: 100%;
   height: 100vh;
-  padding: 100px 0;
-  margin-top: -88px;
+  padding: 139px 0;
+  margin-top: -15px;
   text-align: center;
   color: #fff;
   background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(../img/me.jpg) no-repeat center top;
@@ -863,9 +863,21 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
   }
 }
 
-@media(min-width:1200px) {
+@media(min-width:1280px) {
   .timeline>li {
     min-height: 170px;
+  }
+  #cfluid {
+    margin-top: -35px;
+  }
+  .intro .intro-text {
+    padding-top: 250px;
+  }
+  .intro .intro-text h2 {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 5vw;
+    color: white;
+    margin-top: 20px;
   }
   .timeline>li .timeline-panel {
     padding: 10px 20px 20px 100px;
