redesign skills section

--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,12 @@ ul.dropdown-menu {
   color: #fff;
 }
 
+#skill {
+  margin-left: 15px;
+}
+
+#skillsocial {}
+
 /* Portfolio Section */
 
 #portfolio {
